<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/fragmentPager">

    <fragment
        android:id="@+id/fragmentPager"
        android:name="com.android.skeleton.feature.FragmentPager"
        android:label="@string/frPager_title"
        tools:layout="@layout/fragment_pager">
        <action
            android:id="@+id/action_fragmentPager_to_fragmentHelp"
            app:destination="@id/fragmentHelp"
            app:popUpTo="@id/fragmentPager"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_fragmentPager_to_fragmentAbout"
            app:destination="@id/fragmentAbout"
            app:popUpTo="@id/fragmentPager"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_fragmentPager_to_fragmentItem"
            app:destination="@id/fragmentItem"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/fragmentPager"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_fragmentPager_to_fragmentEula"
            app:destination="@id/fragmentEula"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/fragmentPager"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/fragmentItem"
        android:name="com.android.skeleton.feature.FragmentItem"
        android:label="FragmentItem"
        tools:layout="@layout/fragment_item">
        <argument
            android:name="isNew"
            app:argType="boolean"/>
        <argument
            android:name="item"
            app:argType="com.android.skeleton.domain.Item"
            app:nullable="false"/>
    </fragment>

    <fragment
        android:id="@+id/fragmentHelp"
        android:name="com.android.skeleton.general.FragmentHelp"
        android:label="@string/frHelp_title"
        tools:layout="@layout/fragment_help"/>

    <fragment
        android:id="@+id/fragmentAbout"
        android:name="com.android.skeleton.general.FragmentAbout"
        android:label="@string/frAbout_title"
        tools:layout="@layout/fragment_about"/>

    <fragment
        android:id="@+id/fragmentEula"
        android:name="com.android.skeleton.general.FragmentEula"
        android:label="@string/frEula_title"
        tools:layout="@layout/fragment_eula">
        <action
            android:id="@+id/action_fragmentEula_to_fragmentPager"
            app:destination="@id/fragmentPager"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/fragmentEula"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
