<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.item.FragmentItems">

    <data>

        <variable
            name="viewModel"
            type="com.android.skeleton.feature.item.ViewModelItems" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/frList_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_screenm"
                android:layout_marginHorizontal="@dimen/margin_screenxl"
                android:layout_marginBottom="@dimen/margin_screens"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:text="@string/frList_header" />

            <View
                android:id="@+id/frList_hdiv"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin_screens"
                android:layout_marginHorizontal="@dimen/margin_screenm"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frList_list"
                android:contentDescription="@string/frList_listlabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_screens" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/frList_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_screenl"
            android:contentDescription="@string/frList_fab"
            android:onClick="@{()->viewModel.createItem()}"
            android:visibility="invisible"
            app:layout_anchor="@id/frList_hdiv"
            app:layout_anchorGravity="end|bottom"
            app:srcCompat="@drawable/ic_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>